deployment/deployment-istio/gke-deployment-release1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtest-release1
  namespace: webtest-istio
  labels:
    app: webtest
spec:
  replicas: 8
  selector:
    matchLabels:
      app: webtest
  template:
    metadata:
      labels:
        app: webtest
        version: release1
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: webtest-service-account
      containers:
        - name: webtest
          image: gcr.io/ogplayground/webtest:v15
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
