deployment/deployment-istio/gke-deployment-release2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtest-release2
  namespace: webtest-istio
  labels:
    app: webtest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webtest
  template:
    metadata:
      labels:
        app: webtest
        version: release2
    spec:
      terminationGracePeriodSeconds: 0
      serviceAccountName: webtest-service-account
      containers:
        - name: webtest
          image: gcr.io/ogplayground/webtest:v14
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
