deployment/deployment-istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-service
  namespace: webtest-istio
  labels:
    app: webtest
    service: webtest-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: webtest
